Tmux: Unbind c and f. Interfere with readline.

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -99,8 +99,10 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
 # move between windows with prefix + C-b / C-f
-bind-key -r C-b select-window -t :-
-bind-key -r C-f select-window -t :+
+unbind C-b
+unbind C-f
+bind-key -r Left select-window -t :-
+bind-key -r Right select-window -t :+
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
