Linters: Update rubocop to match rufo

--- a/linters/rubocop.yml
+++ b/linters/rubocop.yml
@@ -125,3 +125,11 @@ Layout/MultilineMethodCallIndentation:
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
+
+Layout/SpaceInLambdaLiteral:
+  EnforcedStyle: require_space
+
+Metrics/BlockLength:
+  CountComments: false
+  Max: 25
+  ExcludedMethods: ['describe', 'context', 'it']
