Tmux: Dotfiles keybinding to new window

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -86,8 +86,8 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 # Open a magit-like "gitsh drawer" pane to the right, close with C-d
 bind-key g split-window -h -p 50 -c '#{pane_current_path}' gitsh
 
-# Open a magit-like "dotfiles drawer" pane to the right
-bind-key m split-window -h -p 50 \; send-keys "cd ~/.dotfiles" Enter
+# Open a new window at the dotfiles directory
+bind-key m new-window -c ~/.dotfiles
 
 # -------- Window Creation / Navigation --------------
 # create a new window
