--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -87,7 +87,7 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 bind-key g split-window -h -p 50 -c '#{pane_current_path}' gitsh
 
 # Open a new window at the dotfiles directory
-bind-key m new-window -c ~/.dotfiles
+bind-key m new-window -c ~/.dotfiles \; rename-window dotfiles
 
 # -------- Window Creation / Navigation --------------
 # create a new window
