--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = home/vim/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
 	branch = master
+[submodule "home/spacemacs.d/layers/w3m"]
+	path = home/spacemacs.d/layers/w3m
+	url = https://github.com/jmromer/w3m.git
