Tmux: Add tpm, tpm-yank
- Kill reattach-to-user-namespace

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -26,7 +26,6 @@ set-option -g base-index 1
 # renumber windows sequentially after closing any of them
 set-option -g renumber-windows on
 
-
 # -------- Statusbar settings ----------------------
 set-option -g status-bg default
 set-option -g status-fg colour237
@@ -128,9 +127,6 @@ bind-key -n S-Right resize-pane -R 2
 bind-key -n S-Down resize-pane -D 1
 bind-key -n S-Up resize-pane -U 1
 
-# Prompted join-pane
-# bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
-
 # Kill session
 bind-key C-q kill-session
 
@@ -144,14 +140,20 @@ bind-key -r p display-panes
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
 # -----------------------------------------------------------------------
-# enables copy paste to/from system clipboard
-set -g default-command "reattach-to-user-namespace -l zsh"
-
 # Use vim keybindings in copy mode
 set-window-option -g mode-keys vi
 
-# Press 'v' to begin selection and 'y' to copy to system clipboard
-bind-key -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# List of plugins
+set -g @tpm_plugins '          \
+      tmux-plugins/tpm             \
+      tmux-plugins/tmux-sensible   \
+      tmux-plugins/tmux-resurrect  \
+      tmux-plugins/tmux-yank \
+      '
 
+# Install / initialize TMUX plugin manager
+# (keep this at the bottom of tmux.conf)
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+run '~/.tmux/plugins/tpm/tpm'
