Tmux: Restore v for copy mode

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -143,6 +143,9 @@ bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 # Use vim keybindings in copy mode
 set-window-option -g mode-keys vi
 
+# Press 'v' to begin selection and 'y' to copy to system clipboard
+bind-key -T copy-mode-vi v send -X begin-selection
+
 # List of plugins
 set -g @tpm_plugins '          \
       tmux-plugins/tpm             \
