--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ home/emacs.d/ido.last
 home/bundle/cache
 home/lein/repl-port
 home/spacemacs.d/local/sensitive
+home/spacemacs.d/.spacemacs.env
 default.vim
 .dir-locals.el
