Shell: Update FZF default opts

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -72,11 +72,11 @@ set-option -g status-keys "emacs"
 
 # fuzzy-select another running session to switch to
 unbind-key C-j
-bind-key o split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
+bind-key o split-window -v "tmux list-sessions -F '#{session_name}' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --no-sort --tiebreak=index | xargs tmux switch-client -t"
 
 # fuzzy-select another window to switch to
 unbind-key w
-bind-key w split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --no-multi --exact --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
+bind-key w split-window -v "tmux list-windows -F '#{window_index}: #W (#{window_panes} panes)' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --no-sort --exact --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
 
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
