--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -33,24 +33,20 @@ set-option -g status-interval 10
 set-option -g status-left '#[fg=colour221]#I:#P '
 set-option -g status-left-length 50
 set-option -g status-right '#[fg=blue]#S #[fg=white]%l:%M#[default]'
-set-option -g window-status-bg default
-set-option -g window-status-current-bg default
-set-option -g window-status-current-fg colour222
+set-option -g window-status-current-style fg=colour222,bg=default
 
 # default window title colors
-set-window-option -g window-status-fg blue
+set-option -g window-status-style fg=blue,bg=default
 
 # pane border
-set-option -g pane-active-border-fg blue
+set-option -g pane-active-border-style fg=blue
 
 # pane number display
 set-option -g display-panes-active-colour blue
 set-option -g display-panes-colour brightred
 
 # message bar
-set-option -g message-attr bright
-set-option -g message-bg default
-set-option -g message-fg blue
+set-option -g message-style bg=default,fg=blue,bright
 set-option -g display-time 2000
 set-option -g display-panes-time 2000
 
