--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "home/spacemacs.d/layers/w3m"]
 	path = home/spacemacs.d/layers/w3m
 	url = https://github.com/jmromer/w3m.git
+[submodule "home/spacemacs.d/local/google-translate"]
+	path = home/spacemacs.d/local/google-translate
+	url = https://github.com/atykhonov/google-translate.git
